# flae-agents

./: .gitignore  AGENTS.md  docker-compose.yml  repo_map.txt
.agent/workflows/: create-idea.md
.agents/: AGENTS.md
.agents/workflows/: brain-storm.md  create-idea.md  create-plans.md  create_backend_plan_workflow.md  create_frontend_plan_workflow.md  excute-ui.md  (+2 more)
.docs/: ARCHITECTURE.md  FLAE_Agent_PRD.md  alembic-guide.md  project-context-backend.md  project-context-frontend.md
backend/: .env  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  pyrefly.toml  test_to_thread.py
backend/app/api/: api_router.py
backend/app/api/endpoints/: user.py
backend/app/api/v1/: api_router.py
backend/app/api/v1/endpoints/: auth.py  user.py  workspace.py
backend/app/core/: config.py  logger.py  security.py
backend/app/db/: database.py
backend/app/helpers/: exception_handler.py
backend/app/models/: base.py  user.py  workspace.py
backend/app/schemas/: auth.py  sche_base.py  sche_user.py  sche_workspace.py
backend/app/services/: auth_service.py  srv_user.py  workspace_srv.py
backend/migrations/: 0001_example.py  env.py
backend/migrations/versions/: 1b34324eb3c9_initial_migration.py
backend/scripts/: migrate.py  prestart.py
backend/tests/api/: test_auth.py  test_workspace.py
docs/: ARCHITECTURE.md  DESIGN.md  FLAE_Agent_PRD.md  FLAE_Agent_PRD_Lean_MVP.md  design-brief-from-idea-antigravity.md  project-context-backend.md  project-context-frontend.md
firebase/: Dockerfile  firebase.json
frontend/: Dockerfile  package-lock.json  package.json
(+80 files in other folders)
