[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=47.0.0",
    "fastapi>=0.136.1",
    "firebase-admin>=7.4.0",
    "firedantic>=0.12.0",
    "google-cloud-firestore>=2.27.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]

[project.scripts]
migrate = "scripts.migrate:run_migrations"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts", "migrations"]
